// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icons test on ios Diamond renders correctly 1`] = `
<svg
  height={50}
  width={50}
>
  <g
    fill="#4D4D4D"
  >
    <path />
  </g>
</svg>
`;

exports[`Icons test on ios Twitter renders correctly 1`] = `
<svg
  height={50}
  width={50}
>
  <path
    fill="#006699"
  />
</svg>
`;

exports[`Icons test on ios Twitter renders correctly with different fillColour 1`] = `
<svg
  height={50}
  width={50}
>
  <path
    fill="#4D4D4D"
  />
</svg>
`;

exports[`Icons test on ios Video renders correctly 1`] = `
<svg
  height={50}
  width={50}
>
  <rect
    fill="#1D1D1B"
    height="13.5721404"
    width="15.4550103"
    x="0.154639175"
    y="0.139754386"
  />
  <polygon
    fill="#1D1D1B"
  />
  <polygon
    fill="#1D1D1B"
  />
</svg>
`;

exports[`Icons test on ios Video renders correctly with different fillColour 1`] = `
<svg
  height={50}
  width={50}
>
  <rect
    fill="#4D4D4D"
    height="13.5721404"
    width="15.4550103"
    x="0.154639175"
    y="0.139754386"
  />
  <polygon
    fill="#4D4D4D"
  />
  <polygon
    fill="#4D4D4D"
  />
</svg>
`;
